    * examples/dc1394_multiview.c: show new proper technique of multi-capture by
      creating a handle for each camera as opposed to port.
    * examples/gray_color_image.c: new example similar to grab_gray_image, but
      also contains example code how to locate first camera on any port and 
      attempt to make the camera non-root.

2003-09-15 Damien <ddouxchamps@users.sf.net>
    * fixed format7 capture setting when the current size register is initialized
      to zero at the camera boot.
	  
2003-09-02  Dan Dennedy <dan@dennedy.org>
    * examples/grab_color_image.c: remove auto settings, add --guid option, add
      filename argument.
    * examples/dc1394_vloopback.c: add scaling, set default mode to mmap, add 
      mmap double buffering, add pipe mode option, adjust palette by option
      (pipe) or by ioctl, lookup default v4l device name via procfs, daemon
      option.

2003-09-23  Dan Dennedy <dan@dennedy.org>
   * examples/grab_color_image.c: fix locating cam by guid on any port
   * examples/dc1394_vloopback.c: add --guid option like grab_color_image
     and renamed some options, and added root detection and reset
	
2003-11-15 Damien <ddouxchamps@users.sf.net>
    * fixes/additions by Johann Schoonees:
    * fixed format7 capture setup function missing some parameters 
    * fixed compil warning in dc1394_absolute.c, line 261.
    * fixed harmless but misleading bug in dc1394_format7.c: line 802 should be removed.
    * add functions dc1394_get_one_shot and dc1394_get_multi_shot.
    * changed dc1394_get_camera_misc_info to avoid probing memory psec registers
      if no user memory is available. This is necessary for the iSight camera from Apple,
      which does not implement registers 0x618h thru 0x62Ch.
	
2003-12-04 Damien <ddouxchamps@users.sf.net>
    * little tag commit for version 0.9.2
	
2003-12-15 Damien <ddouxchamps@users.sf.net>
    * fixed significant bug regarding IIDC specs revision detection
      (in dc1394_get_sw_revision).

	